--- a/static/styles.css
+++ b/static/styles.css
@@ -10,9 +10,35 @@
     padding: 3px 8px;
     border-radius: 2px;
 }
+
 */
 
 .container-fluid {
-    background-color: lightblue;
+    background-color: #f90057;
     text-align: center;
+    font-family: 'Crete Round', serif;
+}
+h5 {
+    text-align: center;
+    margin-right: 8px;
+    margin-left: 8px;
+}
+div {
+    font-weight: bold;
+    text-align: center;
+    margin-right: 8px;
+    margin-left: 8px;
+}
+div.form-check {
+    font-weight: normal;
+    margin-right: 8px;
+    margin-left: 8px;
+}
+#comenzarGrabacion {
+    background-color: #F90057;
+    border: black;
+}
+#detenerGrabacion {
+    background-color: #F90057;
+    border: black;
 }
