Uso de imagen docker
- Eliminación de archivos .dll y .exe.
- Uso de imagen docker con red neuronal entrenada.

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         </title>
         <link href="{{url_for('static',filename='styles.css')}}" rel="stylesheet" type="text/css"/>
         <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" rel="stylesheet"/>
-        <link href="images/artificial-intelligence.png" rel="shortcut icon"/>
+        <link href="{{url_for('static',filename='images/artificial-intelligence.png')}}" rel="shortcut icon"/>
         <link href="https://fonts.gstatic.com" rel="preconnect"/>
         <link href="https://fonts.googleapis.com/css2?family=Crete+Round&display=swap" rel="stylesheet"/>
         <!-- Scripts -->
